--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div>
-            <button class="rbtn"><a href="https://drive.google.com/file/d/1JQOTdC-tLsvyYBbcTWpFfPIsAkTI3Czx/view?usp=sharing">Resume</a></button>
+            <button class="rbtn"><a download="" href="pdf/DINESH_KUMAR_Resume.pdf">Resume</a></button>
         </div>
 
         
