--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/exo-space" rel="stylesheet">
+    <style>
+        @import url('http://fonts.cdnfonts.com/css/exo-space');
+        *{
+            font-family: 'Exo Space', sans-serif;
+        }
+    </style>
 </head>
 <body>
 
