--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
     <link href="http://fonts.cdnfonts.com/css/exo-space" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/cyborg-2" rel="stylesheet">
+                
     <style>
         @import url('http://fonts.cdnfonts.com/css/exo-space');
         *{
-            font-family: 'Exo Space', sans-serif;
+            /* font-family: 'Exo Space', sans-serif; */
+            font-family: 'CYBORG', sans-serif;                                     
         }
     </style>
+
+
 </head>
 <body>
 
