--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 
-    <link href="http://fonts.cdnfonts.com/css/exo-space" rel="stylesheet">
+    <!-- <link href="http://fonts.cdnfonts.com/css/exo-space" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/cyborg-2" rel="stylesheet">
 
     <link href="http://fonts.cdnfonts.com/css/exo-space" rel="stylesheet">
@@ -32,6 +32,16 @@
         body{
             font-family: 'Exo Space', sans-serif;
                                                 
+        }
+    </style> -->
+
+    <style>
+        @font-face {
+            font-family: 'Exo Space'; /*a name to be used later*/
+            src: url('font/Exo_space.ttf'); /*URL to font*/
+        }
+        *{
+            font-family: 'Exo Space';
         }
     </style>
 
