--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     </div>
                     <div class="flip-card-back">
                         <h1>Calculator</h1>
-                        <p>Calculator provides simple and advanced mathematical functions in a app. Perform basic calculations such as add, subtract, multiply and divide.</p>
+                        <p>Calculator provides simple and advanced mathematical functions. Perform basic calculations such as add, subtract, multiply and divide.</p>
                         <p>Tech stack :- HTML | CSS | JavaScript</p>
                         <div class="icons"><a href="https://github.com/dineshjangid03/calculator"><i class="fa-brands fa-github"></i></a><a href="https://dineshjangid03.github.io/calculator/ "><i class="fa-solid fa-link"></i></a></div>
                     </div>
@@ -370,6 +370,10 @@
 
         </div>
 
+
+    </div>
+
+    <div class="box5">
 
     </div>
 
