--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
                     <h2>Data Structure & Algorithms</h2>
                     <p>A data structure is a named location that can be used to store and organize data. And, an algorithm is a collection of steps to solve a particular problem.Learning data structures and algorithms allow us to write efficient and optimized computer programs.</p>
                 </div>
+                <div>
+                    <i class="fa-solid fa-face-smile"></i>
+                    <h2>Communication Effectiveness</h2>
+                    <p>Effective communication is the process of exchanging ideas, thoughts, opinions, knowledge, and data so that the message is received and understood with clarity and purpose. When we communicate effectively, both the sender and receiver feel satisfied.</p>
+                </div>
             </div>
         </div>
 
