--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
 
 
-    <div class="box0 reveal">
+    <div class="box0">
         <div class="box01">
             <h1 class="sub-title">About Me</h1>
         </div>
@@ -124,8 +124,8 @@
                         <p>Java Backend Developer with the ability to learn and collaborate in Rapidly changing environments and compositions. Worked intensively through 1200+ hours of Bootcamp Structure learning of Java, SpringBoot, Hibernate, AWS, JavaScript, HTML5 & CSS3.</p>
                         <div class="tab-title">
                             <p class="tab-links active-link" onclick="opentab('skills')">Technical Skills</p>
-                            <p class="tab-links active-link" onclick="opentab('soft skills')">Soft Skills</p>
-                            <p class="tab-links active-link" onclick="opentab('education')">Education</p>
+                            <p class="tab-links " onclick="opentab('soft skills')">Soft Skills</p>
+                            <p class="tab-links " onclick="opentab('education')">Education</p>
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul class="aboutSkill">
