--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
                     <div class="ico"><a href="mailto:dineshjangid538@gmail.com"><i class="fa-solid fa-envelope"></i></a></div>
                     <div class="ico"><a href="tel:+918696700323"><i class="fa-solid fa-phone"></i></a></div>
                     <div class="ico"><a href="https://www.instagram.com/dineshjangid03/"><i class="fa-brands fa-square-instagram"></i></a></div>
+                    <div class="ico"><a href="https://wa.me/918696700323"><i class="fa-brands fa-whatsapp"></i></a></div>
                 </div>
 
                 
