--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                         <div class="tab-contents" id="education">
                             <ul class="aboutSkill">
                                 <li><span>Full Stack Web Development</span><span class="co"><br>Masai School, Bengaluru<br>Apr 2022 - Dec 2022</span></li>
-                                <li><span>Graduation (BCA)</span><span class="co"><br>Maharaja Agrasen Himalayan Garhwal University<br> Jul 2018 - Aug 2021</span></li>
+                                <li><span>Graduation (BA)</span><span class="co"><br>Vardhman Mahaveer Open University, Kota<br> Jul 2018 - present</span></li>
+                                <!-- <li><span>Graduation (BCA)</span><span class="co"><br>Maharaja Agrasen Himalayan Garhwal University<br> Jul 2018 - Aug 2021</span></li> -->
                                 <li><span>Diploma in Elementary Education</span><span class="co"><br>Rajasthan Education Department Bikaner<br> Jul 2014 - Oct 2016</span></li>
                             </ul>
                         </div>
