--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                         <div class="tab-contents" id="education">
                             <ul class="aboutSkill">
                                 <li><span>Full Stack Web Development</span><span class="co"><br>Masai School, Bengaluru<br>Apr 2022 - Dec 2022</span></li>
-                                <li><span>Graduation (BA)</span><span class="co"><br>Vardhman Mahaveer Open University, Kota<br> Jul 2018 - present</span></li>
-                                <!-- <li><span>Graduation (BCA)</span><span class="co"><br>Maharaja Agrasen Himalayan Garhwal University<br> Jul 2018 - Aug 2021</span></li> -->
+                                <!-- <li><span>Graduation (BA)</span><span class="co"><br>Vardhman Mahaveer Open University, Kota<br> Jul 2018 - present</span></li> -->
+                                <li><span>Graduation (BCA)</span><span class="co"><br>Maharaja Agrasen Himalayan Garhwal University<br> Jul 2018 - Aug 2021</span></li>
                                 <li><span>Diploma in Elementary Education</span><span class="co"><br>Rajasthan Education Department Bikaner<br> Jul 2014 - Oct 2016</span></li>
                             </ul>
                         </div>
@@ -607,7 +607,7 @@
                     <p><i class="fa-solid fa-location-dot"></i> Barmer, Rajasthan</p>
                 </div>
                 <div class="box5111">
-                    <p><i class="fa-solid fa-envelope"></i> dineshjangid538@gmail.com</p>
+                    <p><i class="fa-solid fa-envelope"></i>dinesh.jangid323@gmail.com</p>
                 </div>
                 <div class="box5111">
                     <p><i class="fa-solid fa-phone"></i> +91-8696700323</p>
@@ -616,7 +616,7 @@
                 <div class="box5112">
                     <div class="ico"><a href="https://github.com/dineshjangid03/"><i class="fa-brands fa-github"></i></a></div>
                     <div class="ico"><a href="https://www.linkedin.com/in/dineshjangid03/"><i class="fa-brands fa-linkedin"></i></a></div>
-                    <div class="ico"><a href="mailto:dineshjangid538@gmail.com"><i class="fa-solid fa-envelope"></i></a></div>
+                    <div class="ico"><a href="mailto:dinesh.jangid323@gmail.com"><i class="fa-solid fa-envelope"></i></a></div>
                     <div class="ico"><a href="tel:+918696700323"><i class="fa-solid fa-phone"></i></a></div>
                     <div class="ico"><a href="https://www.instagram.com/dineshjangid03/"><i class="fa-brands fa-square-instagram"></i></a></div>
                     <div class="ico"><a href="https://wa.me/918696700323"><i class="fa-brands fa-whatsapp"></i></a></div>
